# foxlab-cookie

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/notebooks/: 00-import_demo.ipynb
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/data/: process_data.py
{{cookiecutter.workspace_name}}/{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md
