[project]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",  
  "pyarrow",
  "matplotlib",  
  "seaborn",  
  "scikit-learn",  
  "notebook",
  {% if cookiecutter.create_models_directory == 'y' -%} "torch",  {% endif -%}
  ]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pre-commit",
  "notebook",
]

[project.urls]
repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO -sv --durations=0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pylint
  "PL",
  # isort
  "I",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-comprehensions
  "C4",
  # ruff
  "RUF",
]
fixable = ["ALL"]
ignore = [
  "PLR0913", # too many arguments
  "PLR0914", # too many local variables
  "PLR0917", # too many positional arguments
  "PLR2004", # magic number
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "E501",    # line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.report]
skip_empty = true